syntax = "proto3";
package proto;

option go_package = "github.com/dailoi280702/vrs-general-service/proto";

service Service {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (User);
  rpc GetUserByID(IdRequest) returns (User);
  rpc GetUserWatchedHistory(IdRequest) returns (Videos);
  rpc GetVideosByIds(GetVideosByIdsRequest) returns (Videos);
}

message User {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message Video {
  int64 id = 1;
  int64 views = 2; 
  int64 likes = 3; 
  int64 comments = 4; 
  int64 shares = 5; 
  double length = 6; 
  double watch_time = 7; 
}

message Videos {
  repeated Video videos = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message IdRequest {
  int64 id = 1;
}

message GetVideosByIdsRequest {
  repeated int64 id = 1;
}
